Fix T42472: Undoing/Redoing repeated transform operator gives wrong final matrix on objects with no geom data.

This hack should not be needed here, quoting Sergey, the actual issue comes from BKE_object_handle_update_ex,
which is calling BKE_object_where_is_calc_ex when it shouldn't.

Propper fix is depsgraph refactor topic, though.